Updates AttachAPI usage to be compatible with newer JVMs